fixed visibility (?)

--- a/public/styles.css
+++ b/public/styles.css
@@ -260,7 +260,6 @@ button {
 
 .display-box {
     position: fixed;
-    visibility: hidden;
     opacity: 0;
     left: 0;
     top: 100%;
